--- a/index.html
+++ b/index.html
@@ -1,12 +1,183 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>Technomart</title>
+</head>
+<body>
+	
+	<header class="main-header">
+		<div class="container">
+			
+			<div class="header-top">
+				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="100" height="100"></a>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+				<div class="search-field"></div>
 
-  </body>
+				<ul class="number-plate">
+					<li>
+						<a href="#">Закладки: 0</a>
+					</li>
+					<li>
+						<a href="#">Корзина: 0</a>
+					</li>
+					<li>
+						<a href="#">Оформить заказ</a>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+
+		<div class="header_shop-description">
+			<p>
+				Интернет-магазин
+				строительных материалов
+				и инструментов для ремонта
+			</p>
+		</div>
+
+		<div class="header-contacts">
+			<div>
+				<p>+7 (812) 555-05-55</p>
+			</div>
+			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+		</div>
+
+		<div class="header_user-block">
+			<a class="login" href="#">Войти</a>
+			<a class="register" href="#">Регистрация</a>
+		</div>
+
+		<nav class="main-navigation">
+			<ul>
+				<li>
+					<a href="#">Главная</a>
+				</li>
+				<li>
+					<a href="#">Компания</a>
+				</li>
+				<li>
+					<a href="#">Каталог</a>
+				</li>
+				<li>
+					<a href="#">Новости</a>
+				</li>
+				<li>
+					<a href="#">Спецпредложения</a>
+				</li>
+				<li>
+					<a href="#">Доставка</a>
+				</li>
+				<li>
+					<a href="#">Контакты</a>
+				</li>
+			</ul>
+		</nav>
+
+	</header>
+
+	<main class="container">
+		
+		<section class="info-panel">
+			
+			<div class="info-block">
+				<b>Материалы</b>
+				<a href="#">На любой вкус</a>
+			</div>
+
+			<div class="info-block">
+				<b>Инструмент</b>
+				<a href="#">На все случаи</a>
+			</div>
+
+			<div class="info-block">
+				<b>Техника</b>
+				<a href="#">Для стройки</a>
+			</div>
+
+			<div class="slider">
+				<div class="slide-title">
+					<b>Перфораторы</b>
+					<p>Настоящие мужские игрушки</p>
+				</div>
+
+				<div class="prev"></div>
+
+				<div class="next"></div>
+
+				<a href="#">Открыть каталог</a>
+			</div>
+
+			<div class="info-block">
+				<b>Скидки 50%</b>
+				<a href="#">На 350 товаров</a>
+			</div>
+
+			<div class="info-block">
+				<b>Доставка</b>
+				<a href="#">Бесплатно</a>
+			</div>
+
+		</section>
+
+		<section class="popular-items">
+			
+			<div class="popular-items_title">
+				<h2>Популярные товары:</h2>
+				<a href="#">Все популярные товары</a>
+			</div>
+
+			<article class="item-card">
+				<b>Перфоратор BOSCH BFG 9000</b>
+				<p>32500 Р.</p>
+				<div>
+					<p>25500 Р.</p>
+				</div>
+			</article>
+
+			<article class="item-card">
+				<b>Перфоратор BOSCH BFG 3000</b>
+				<p>22500 Р.</p>
+				<div>
+					<p>15500 Р.</p>
+				</div>
+			</article>
+
+			<article class="item-card">
+				<b>Перфоратор BOSCH BFG 6000</b>
+				<p>30500 Р.</p>
+				<div>
+					<p>25500 Р.</p>
+				</div>
+			</article>
+
+			<article class="item-card">
+				<b>Перфоратор BOSCH BFG 2000</b>
+				<div>
+					<p>12500 Р.</p>
+				</div>
+			</article>
+
+		</section>
+
+		<section class="manufacturers">
+			
+			<div class="manufacturers_title">
+				<h2>Популярные производители:</h2>
+				<a href="#">Все производители</a>
+			</div>
+
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+			
+		</section>
+	</main>
+</body>
 </html>
