--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 		</div>
 
-		<div class="header_user-block">
+		<div class="user-block">
 			<a class="login" href="#">Войти</a>
 			<a class="register" href="#">Регистрация</a>
 		</div>
@@ -129,33 +129,37 @@
 			</div>
 
 			<article class="item-card">
+				<img src="#" width="100" height="100">
 				<b>Перфоратор BOSCH BFG 9000</b>
-				<p>32500 Р.</p>
+				<span>32500 Р.</span>
 				<div>
-					<a href="#"><span>25500 Р.</span></a>
+					<a href="#">25500 Р.</a>
 				</div>
 			</article>
 
 			<article class="item-card">
+				<img src="#" width="100" height="100">
 				<b>Перфоратор BOSCH BFG 3000</b>
-				<p>22500 Р.</p>
+				<span>22500 Р.</span>
 				<div>
-					<a href="#"><span>15500 Р.</span></a>
+					<a href="#">15500 Р.</a>
 				</div>
 			</article>
 
 			<article class="item-card">
+				<img src="#" width="100" height="100">
 				<b>Перфоратор BOSCH BFG 6000</b>
-				<p>30500 Р.</p>
+				<span>30500 Р.</span>
 				<div>
-					<a href="#"><span>25500 Р.</span></a>
+					<a href="#">25500 Р.</a>
 				</div>
 			</article>
 
 			<article class="item-card">
+				<img src="#" width="100" height="100">
 				<b>Перфоратор BOSCH BFG 2000</b>
 				<div>
-					<a href="#"><span>12500 Р.</span></a>
+					<a href="#">12500 Р.</a>
 				</div>
 			</article>
 
