--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Technomart</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
@@ -10,7 +11,7 @@
 		<div class="container">
 			
 			<div class="header-top">
-				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="100" height="100"></a>
+				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
 
 				<div class="search-field"></div>
 
@@ -129,7 +130,7 @@
 			</div>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img1.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 9000</b>
 				<span>32500 Р.</span>
 				<div>
@@ -138,7 +139,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img2.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 3000</b>
 				<span>22500 Р.</span>
 				<div>
@@ -147,7 +148,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img3.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 6000</b>
 				<span>30500 Р.</span>
 				<div>
@@ -156,7 +157,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img4.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 2000</b>
 				<div>
 					<a href="#">12500 Р.</a>
@@ -173,28 +174,28 @@
 			</div>
 
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/BOSCH.png" width="126" height="37" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/makita.png" width="123" height="40" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/DeWALT.png" width="146" height="44" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/interskol.jpg" width="184" height="32" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/Hitachi.png" width="169" height="31" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/LG.png" width="121" height="73" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/AEG.png" width="151" height="96" alt="#"></a>
 			</div>
 			<div class="brand">
-				<a href="#"><img src="img/" width="100" height="100" alt="#"></a>
+				<a href="#"><img src="img/Metabo.png" width="204" height="69" alt="#"></a>
 			</div>
 			
 		</section>
@@ -274,7 +275,7 @@
 					заехав в наш офис:
 				</p>
 
-				<a href="#"><img src="#" alt="#" width="100" height="100"></a>
+				<a href="#"><img src="img/map.jpg" alt="#" width="300" height="158"></a>
 				
 				<a class="btn" href="#">Заблудились? Напишите нам!</a>
 
@@ -290,7 +291,7 @@
 
 			<div class="main-footer_top1">
 
-				<a class="footer-logo" href="#"><img src="#" alt="#" width="100" height="100"></a>
+				<a class="footer-logo" href="#"><img src="img/logo.png" alt="#" width="138" height="21"></a>
 
 				<ul class="footer_first-nav">
 					<li>
