--- a/technomart-catalog.html
+++ b/technomart-catalog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>technomart-catalog</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
@@ -10,7 +11,7 @@
 		<div class="container">
 			
 			<div class="header-top">
-				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="100" height="100"></a>
+				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
 
 				<div class="search-field"></div>
 
@@ -137,7 +138,7 @@
 			</div>	
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img2.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 3000</b>
 				<span>22500 Р.</span>
 				<div>
@@ -146,7 +147,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img3.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 6000</b>
 				<span>30500 Р.</span>
 				<div>
@@ -155,10 +156,13 @@
 			</article>
 
 			<article class="item-card">
-				<div class="hover_item-card">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
+			<!-- 
+			<div class="hover_item-card">
+				<a href="#">Купить</a>
+				<a href="#">В закладки</a>
+			</div> 
+			-->
+				<img src="img/img4.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 2000</b>
 				<div>
 					<a href="#">12500 Р.</a>
@@ -166,7 +170,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img2.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 3000</b>
 				<span>22500 Р.</span>
 				<div>
@@ -175,7 +179,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img3.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 6000</b>
 				<span>30500 Р.</span>
 				<div>
@@ -184,7 +188,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img4.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 2000</b>
 				<div>
 					<a href="#">12500 Р.</a>
@@ -192,7 +196,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img2.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 3000</b>
 				<span>22500 Р.</span>
 				<div>
@@ -201,7 +205,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img3.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 6000</b>
 				<span>30500 Р.</span>
 				<div>
@@ -210,7 +214,7 @@
 			</article>
 
 			<article class="item-card">
-				<img src="#" width="100" height="100">
+				<img src="img/img4.jpg" width="218" height="158">
 				<b>Перфоратор BOSCH BFG 2000</b>
 				<div>
 					<a href="#">12500 Р.</a>
@@ -252,7 +256,7 @@
 
 			<div class="main-footer_top1">
 
-				<a class="footer-logo" href="#"><img src="#" alt="#" width="100" height="100"></a>
+				<a class="footer-logo" href="#"><img src="img/logo.png" alt="#" width="138" height="21"></a>
 
 				<ul class="footer_first-nav">
 					<li>
