--- a/index.html
+++ b/index.html
@@ -3,78 +3,88 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Technomart</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
 	<header class="main-header">
+	<div class="blue">
 		<div class="container">
-			
-			<div class="header-top">
-				<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
+				
+				<div class="header-top">
+					<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
 
-				<div class="search-field"></div>
+					<div class="search-field"></div>
 
-				<ul class="number-plate">
+					<div class="number-plate">
+						<ul>
+							<li>
+								<a href="#">Закладки: 0</a>
+							</li>
+							<li>
+								<a href="#">Корзина: 0</a>
+							</li>
+							<li>
+								<a href="#">Оформить заказ</a>
+							</li>
+						</ul>
+					</div>	
+				</div>
+		</div>
+	</div>
+
+	<div class="grey clearfix">	
+		<div class="container">
+			<div class="header-middle clearfix">
+				<div class="header-colomn shop-description">
+					<p>
+						Интернет-магазин
+						строительных материалов
+						и инструментов для ремонта
+					</p>
+				</div>
+
+				<div class="header-colomn contacts">
+					<div>
+						<p>+7 (812) 555-05-55</p>
+					</div>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+				</div>
+
+				<div class="header-colomn user-block">
+					<a class="login" href="#">Войти</a>
+					<a class="register" href="#">Регистрация</a>
+				</div>
+			</div>	
+
+			<nav class="main-navigation">
+				<ul>
 					<li>
-						<a href="#">Закладки: 0</a>
+						<a href="#">Главная</a>
 					</li>
 					<li>
-						<a href="#">Корзина: 0</a>
+						<a href="#">Компания</a>
 					</li>
 					<li>
-						<a href="#">Оформить заказ</a>
+						<a href="#">Каталог</a>
+					</li>
+					<li>
+						<a href="#">Новости</a>
+					</li>
+					<li>
+						<a href="#">Спецпредложения</a>
+					</li>
+					<li>
+						<a href="#">Доставка</a>
+					</li>
+					<li>
+						<a href="#">Контакты</a>
 					</li>
 				</ul>
-			</div>
-
+			</nav>
 		</div>
-
-		<div class="header_shop-description">
-			<p>
-				Интернет-магазин
-				строительных материалов
-				и инструментов для ремонта
-			</p>
-		</div>
-
-		<div class="header-contacts">
-			<div>
-				<p>+7 (812) 555-05-55</p>
-			</div>
-			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-		</div>
-
-		<div class="user-block">
-			<a class="login" href="#">Войти</a>
-			<a class="register" href="#">Регистрация</a>
-		</div>
-
-		<nav class="main-navigation">
-			<ul>
-				<li>
-					<a href="#">Главная</a>
-				</li>
-				<li>
-					<a href="#">Компания</a>
-				</li>
-				<li>
-					<a href="#">Каталог</a>
-				</li>
-				<li>
-					<a href="#">Новости</a>
-				</li>
-				<li>
-					<a href="#">Спецпредложения</a>
-				</li>
-				<li>
-					<a href="#">Доставка</a>
-				</li>
-				<li>
-					<a href="#">Контакты</a>
-				</li>
-			</ul>
-		</nav>
+	</div>	
 
 	</header>
 
@@ -124,15 +134,15 @@
 
 		<section class="popular-items">
 			
-			<div class="popular-items_title">
+			<div class="content-title">
 				<h2>Популярные товары:</h2>
 				<a href="#">Все популярные товары</a>
 			</div>
-
-			<article class="item-card">
+			
+			<article class="item-card clearfix">
 				<img src="img/img1.jpg" width="218" height="158">
-				<b>Перфоратор BOSCH BFG 9000</b>
-				<span>32500 Р.</span>
+				<div>Перфоратор BOSCH BFG 9000</div>
+				<div>32500 Р.</div>
 				<div>
 					<a href="#">25500 Р.</a>
 				</div>
@@ -140,8 +150,8 @@
 
 			<article class="item-card">
 				<img src="img/img2.jpg" width="218" height="158">
-				<b>Перфоратор BOSCH BFG 3000</b>
-				<span>22500 Р.</span>
+				<div>Перфоратор BOSCH BFG 3000</div>
+				<div>22500 Р.</div>
 				<div>
 					<a href="#">15500 Р.</a>
 				</div>
@@ -149,8 +159,8 @@
 
 			<article class="item-card">
 				<img src="img/img3.jpg" width="218" height="158">
-				<b>Перфоратор BOSCH BFG 6000</b>
-				<span>30500 Р.</span>
+				<div>Перфоратор BOSCH BFG 6000</div>
+				<div>30500 Р.</div>
 				<div>
 					<a href="#">25500 Р.</a>
 				</div>
@@ -158,17 +168,18 @@
 
 			<article class="item-card">
 				<img src="img/img4.jpg" width="218" height="158">
-				<b>Перфоратор BOSCH BFG 2000</b>
+				<div>Перфоратор BOSCH BFG 2000</div>
+				<div></div>
 				<div>
 					<a href="#">12500 Р.</a>
 				</div>
 			</article>
-
+			
 		</section>
 
 		<section class="manufacturers">
 			
-			<div class="manufacturers_title">
+			<div class="content-title">
 				<h2>Популярные производители:</h2>
 				<a href="#">Все производители</a>
 			</div>
@@ -285,7 +296,7 @@
 
 	</main>
 
-	<footer class="main-footer">
+	<footer class="main-footer container">
 
 		<div class="main-footer_top">
 
