--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 
 	</header>
 
-	<main class="container">
-		
+	<main>
+	<div class="container">
+
 		<section class="info-panel">
 			
 			<div class="info-block">
@@ -210,43 +211,52 @@
 			</div>
 			
 		</section>
+	</div>	
 
-		<section class="servis">
-			
-			<div class="servis-title">	
-				<h2>Сервисы</h2>
-				<p>
-					Хороший интернет-магазин отличается от плохого не только ценами!
-					Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
-				</p>
-			</div>	
+	<div class="service-grey">
+		<div class="container">
 
-			<nav class="servis-nav">
-				<ul>
-					<li>
-						<a href="#">Доставка</a>
-					</li>
-					<li>
-						<a href="#">Гарантия</a>
-					</li>
-					<li>
-						<a href="#">Кредит</a>
-					</li>
-				</ul>
-			</nav>
+			<section class="service">
+				
+				<div class="service-title">	
+					<h2>Сервисы</h2>
+					<p>
+						Хороший интернет-магазин отличается от плохого не только ценами!
+						Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+					</p>
+				</div>	
 
-			<div class="servis-slider">
-				<h3>Доставка</h3>
-				<p>
-					Мы с удовольствием доставим ваш товар прямо<br> 
-					к вашему подъезду совершенно бесплатно!<br> 
-					Ведь мы неплохо заработаем,<br> 
-					поднимая его на ваш на этаж!
-				</p>
-			</div>
+				<div class="clearfix">
+					<nav class="service-nav">
+						<ul>
+							<li>
+								<a href="#">Доставка</a>
+							</li>
+							<li>
+								<a href="#">Гарантия</a>
+							</li>
+							<li>
+								<a href="#">Кредит</a>
+							</li>
+						</ul>
+					</nav>
 
-		</section>
+					<div class="service-slider">
+						<h3>Доставка</h3>
+						<p>
+							Мы с удовольствием доставим ваш товар прямо<br> 
+							к вашему подъезду совершенно бесплатно!<br> 
+							Ведь мы неплохо заработаем,<br> 
+							поднимая его на ваш на этаж!
+						</p>
+					</div>
+				</div>	
 
+			</section>
+		</div>	
+	</div>	
+
+	<div class="container">
 		<section class="technomart-info">
 			
 			<article class="technomart-info_left">
