доделал сетку боди

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	</div>	
 
 	<div class="container">
-		<section class="technomart-info">
+		<section class="technomart-info clearfix">
 			
 			<article class="technomart-info_left">
 
