--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 				<div class="header-top">
 					<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
 
-					<div class="search-field"></div>
+					<div class="search-field">
+						<label><span class="search-icon"></span>
+						<input type="text" name="search" placeholder="Поиск:">
+						</label>
+					</div>
 
 					<div class="number-plate">
 						<ul>
 							<li>
-								<a href="#">Закладки: 0</a>
+								<a class="npi npi-mark" href="#">Закладки: 0</a>
 							</li>
 							<li>
-								<a href="#">Корзина: 0</a>
+								<a class="npi npi-basket" href="#">Корзина: 0</a>
 							</li>
 							<li>
 								<a href="#">Оформить заказ</a>
