--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Technomart</title>
-	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
 	
@@ -15,10 +16,9 @@
 				<div class="header-top">
 					<a class="logo" href="#"><img src="img/logo.png" alt="logo" width="110" height="18"></a>
 
-					<div class="search-field">
-						<label><span class="search-icon"></span>
-						<input type="text" name="search" placeholder="Поиск:">
-						</label>
+					<div class="search-field">	
+						<input id="search" type="text" name="search" placeholder="Поиск:">
+						<label for="search"></label>
 					</div>
 
 					<div class="number-plate">
@@ -30,7 +30,7 @@
 								<a class="npi npi-basket" href="#">Корзина: 0</a>
 							</li>
 							<li>
-								<a href="#">Оформить заказ</a>
+								<a class="order" href="#">Оформить заказ</a>
 							</li>
 						</ul>
 					</div>	
@@ -42,23 +42,23 @@
 		<div class="container">
 			<div class="header-middle clearfix">
 				<div class="header-colomn shop-description">
-					<p>
-						Интернет-магазин
-						строительных материалов
+					
+						Интернет-магазин <br>
+						строительных материалов <br>
 						и инструментов для ремонта
-					</p>
+					
 				</div>
 
 				<div class="header-colomn contacts">
-					<div>
-						<p>+7 (812) 555-05-55</p>
+					<div class="phone-number">
+						<span>+7 (812) 555-05-55</span>
 					</div>
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
 
 				<div class="header-colomn user-block">
+					<a class="registr" href="#">Регистрация</a>
 					<a class="login" href="#">Войти</a>
-					<a class="register" href="#">Регистрация</a>
 				</div>
 			</div>	
 
@@ -397,6 +397,8 @@
 		</div>
 
 	</footer>
-	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="_xprecise/xprecise.min.js" type="text/javascript"></script>
 </body>
+
 </html>
