--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<nav class="main-navigation">
 				<ul>
 					<li>
-						<a href="#">Главная</a>
+						<a class="first" href="#">Главная</a>
 					</li>
 					<li>
 						<a href="#">Компания</a>
@@ -83,7 +83,7 @@
 						<a href="#">Доставка</a>
 					</li>
 					<li>
-						<a href="#">Контакты</a>
+						<a class="last" href="#">Контакты</a>
 					</li>
 				</ul>
 			</nav>
