--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<nav class="main-navigation">
 				<ul>
 					<li>
-						<a class="first" href="#">Главная</a>
+						<a href="#">Главная</a>
 					</li>
 					<li>
 						<a href="#">Компания</a>
@@ -83,7 +83,7 @@
 						<a href="#">Доставка</a>
 					</li>
 					<li>
-						<a class="last" href="#">Контакты</a>
+						<a href="#">Контакты</a>
 					</li>
 				</ul>
 			</nav>
@@ -97,17 +97,17 @@
 
 		<section class="info-panel">
 			
-			<div class="info-block">
+			<div class="info-block materials">
 				<b>Материалы</b>
 				<a href="#">На любой вкус</a>
 			</div>
 
-			<div class="info-block">
+			<div class="info-block tool">
 				<b>Инструмент</b>
 				<a href="#">На все случаи</a>
 			</div>
 
-			<div class="info-block">
+			<div class="info-block equipment">
 				<b>Техника</b>
 				<a href="#">Для стройки</a>
 			</div>
@@ -125,12 +125,12 @@
 				<a href="#">Открыть каталог</a>
 			</div>
 
-			<div class="info-block">
+			<div class="info-block discounts">
 				<b>Скидки 50%</b>
 				<a href="#">На 350 товаров</a>
 			</div>
 
-			<div class="info-block">
+			<div class="info-block delivery">
 				<b>Доставка</b>
 				<a href="#">Бесплатно</a>
 			</div>
