--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 				</div>
 
 				<div class="header-colomn user-block">
-					<a class="registr" href="#">Регистрация</a>
-					<a class="login" href="#">Войти</a>
+					<ul>
+						<li><a class="login" href="#">Войти</a></li>
+						<li><a class="registr" href="#">Регистрация</a></li>
+					</ul>
 				</div>
 			</div>	
 
@@ -97,7 +99,8 @@
 
 		<section class="info-panel">
 			
-			<div class="info-block materials new">
+			<div class="info-block materials">
+				<div class="flag-new">new</div>
 				<b>Материалы</b>
 				<a href="#">На любой вкус</a>
 			</div>
@@ -151,54 +154,75 @@
 
 		<section class="popular-items">
 			
-			<div class="content-title">
-				<h2>Популярные товары:</h2>
-				<a href="#">Все популярные товары</a>
+			<div class="content-block">
+				<div class="content-title">Популярные товары:</div>
+				<a class="btn" href="#">Все популярные товары</a>
 			</div>
 			
-			<article class="item-card clearfix">
-				<img src="img/img1.jpg" width="218" height="158">
-				<div>Перфоратор BOSCH BFG 9000</div>
-				<div>32500 Р.</div>
-				<div>
-					<a href="#">25500 Р.</a>
-				</div>
-			</article>
+			<div class="catalog-items">
 
-			<article class="item-card">
-				<img src="img/img2.jpg" width="218" height="158">
-				<div>Перфоратор BOSCH BFG 3000</div>
-				<div>22500 Р.</div>
-				<div>
-					<a href="#">15500 Р.</a>
-				</div>
-			</article>
+				<article class="catalog-item">
+					<div class="image"><img src="img/img1.jpg" width="218" height="158"></div>
+					<div class="actions">
+						<a class="buy" href="#">купить</a>
+						<a class="bookmark" href="#">в закладки</a>
+					</div>
+					<div class="title">
+						Перфоратор BOSCH 
+						BFG 9000
+					</div>
+					<div class="discount">32500 Р.</div>
+					<div class="price">25500 Р.</div>
+				</article>
 
-			<article class="item-card">
-				<img src="img/img3.jpg" width="218" height="158">
-				<div>Перфоратор BOSCH BFG 6000</div>
-				<div>30500 Р.</div>
-				<div>
-					<a href="#">25500 Р.</a>
-				</div>
-			</article>
+				<article class="catalog-item">
+					<div class="image"><img src="img/img2.jpg" width="218" height="158"></div>
+					<div class="actions">
+						<a class="buy" href="#">купить</a>
+						<a class="bookmark" href="#">в закладки</a>
+					</div>
+					<div class="title">
+						Перфоратор BOSCH BFG 3000
+					</div>
+					<div class="discount">22500 Р.</div>
+					<div class="price">15500 Р.</div>
+				</article>
 
-			<article class="item-card">
-				<img src="img/img4.jpg" width="218" height="158">
-				<div>Перфоратор BOSCH BFG 2000</div>
-				<div></div>
-				<div>
-					<a href="#">12500 Р.</a>
-				</div>
-			</article>
+				<article class="catalog-item">
+					<div class="image"><img src="img/img3.jpg" width="218" height="158"></div>
+					<div class="actions">
+						<a class="buy" href="#">купить</a>
+						<a class="bookmark" href="#">в закладки</a>
+					</div>
+					<div class="title">
+						Перфоратор BOSCH BFG 6000
+					</div>
+					<div class="discount">30500 Р.</div>
+					<div class="price">25500 Р.</div>
+				</article>
+
+				<article class="catalog-item">
+				<div class="flag-new">new</div>
+					<div class="image"><img src="img/img4.jpg" width="218" height="158"></div>
+					<div class="actions">
+						<a class="buy" href="#">купить</a>
+						<a class="bookmark" href="#">в закладки</a>
+					</div>
+					<div class="title">
+						Перфоратор BOSCH BFG 2000
+					</div>
+					<div class="discount"></div>
+					<div class="price">12500 Р.</div>
+				</article>
+			</div>	
 			
 		</section>
 
 		<section class="manufacturers">
 			
-			<div class="content-title">
-				<h2>Популярные производители:</h2>
-				<a href="#">Все производители</a>
+			<div class="content-block">
+				<div class="content-title">Популярные производители:</div>
+				<a class="btn" href="#">Все производители</a>
 			</div>
 
 			<div class="brand">
