--- a/index.html
+++ b/index.html
@@ -225,31 +225,33 @@
 				<a class="btn" href="#">Все производители</a>
 			</div>
 
-			<div class="brand">
-				<a href="#"><img src="img/BOSCH.png" width="126" height="37" alt="#"></a>
+			<div class="brands-wrap">
+				<div class="brands">
+					<a href="#"><img src="img/BOSCH.png" width="126" height="37" alt="BOSCH"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/makita.png" width="123" height="40" alt="makita"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/DeWALT.png" width="146" height="44" alt="DeWALT"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/interskol.jpg" width="184" height="32" alt="interskol"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/Hitachi.png" width="169" height="31" alt="Hitachi"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/LG.png" width="121" height="73" alt="LG"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/AEG.png" width="151" height="96" alt="AEG"></a>
+				</div>
+				<div class="brands">
+					<a href="#"><img src="img/Metabo.png" width="204" height="69" alt="Metabo"></a>
+				</div>
 			</div>
-			<div class="brand">
-				<a href="#"><img src="img/makita.png" width="123" height="40" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/DeWALT.png" width="146" height="44" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/interskol.jpg" width="184" height="32" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/Hitachi.png" width="169" height="31" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/LG.png" width="121" height="73" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/AEG.png" width="151" height="96" alt="#"></a>
-			</div>
-			<div class="brand">
-				<a href="#"><img src="img/Metabo.png" width="204" height="69" alt="#"></a>
-			</div>
-			
+
 		</section>
 	</div>	
 
@@ -261,7 +263,7 @@
 				<div class="service-title">	
 					<h2>Сервисы</h2>
 					<p>
-						Хороший интернет-магазин отличается от плохого не только ценами!
+						Хороший интернет-магазин отличается от плохого не только ценами!<br>
 						Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
 					</p>
 				</div>	
