--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 				<div class="clearfix">
 					<nav class="service-nav">
 						<ul>
-							<li>
+							<li class="active">
 								<a href="#">Доставка</a>
 							</li>
 							<li>
@@ -284,13 +284,36 @@
 					</nav>
 
 					<div class="service-slider">
-						<h3>Доставка</h3>
-						<p>
-							Мы с удовольствием доставим ваш товар прямо<br> 
-							к вашему подъезду совершенно бесплатно!<br> 
-							Ведь мы неплохо заработаем,<br> 
-							поднимая его на ваш на этаж!
-						</p>
+
+						<div class="service-slide service-slide-one">
+							<div class="title">Доставка</div>
+							<div class="description">
+								Мы с удовольствием доставим ваш товар прямо<br> 
+								к вашему подъезду совершенно бесплатно!<br> 
+								Ведь мы неплохо заработаем,<br> 
+								поднимая его на ваш на этаж!
+							</div>
+						</div>	
+
+						<div class="service-slide service-slide-two">
+							<div class="title">Гарантия</div>
+							<div class="description">
+								Если купленный у нас товар поломается или заискрит, <br>
+								а также в случае пожара, спровоцированного его возгаранием, <br>  вы всегда можете быть уверены в нашей гарантии. Мы обменяем <br>
+								сгоревший товар на новый. <br>
+								Дом уж восстановите как-нибудь сами.
+							</div>
+						</div>
+
+						<div class="service-slide service-slide-tree">
+							<div class="title">Кредит</div>
+							<div class="description">
+								Залезть в долговую яму стало проще! <br>
+								Кредитные консультанты придут вам на помощь.
+							</div>
+							<a class="btn" href="#">Отправить заявку</a>
+						</div>
+
 					</div>
 				</div>	
 
