--- a/index.html
+++ b/index.html
@@ -331,13 +331,11 @@
 					Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
 				</p>
 				<p>
-					Мы можем доставить ваш товар в самые отдаленные точки России!
-				</p>
-				<p>
+					Мы можем доставить ваш товар в самые отдаленные точки России! <br>
 					Техномарт работает со многими транспортными компаниями: 
 				</p>
 
-				<ul>
+				<ul class="delivery-list">
 					<li>
 						<a href="#">Деловые линии</a>
 					</li>
@@ -361,7 +359,7 @@
 					заехав в наш офис:
 				</p>
 
-				<a href="#"><img src="img/map.jpg" alt="#" width="300" height="158"></a>
+				<a class="map" href="#"><img src="img/map.jpg" alt="#" width="300" height="158"></a>
 				
 				<a class="btn" href="#">Заблудились? Напишите нам!</a>
 
@@ -431,10 +429,8 @@
 			<div class="container">
 
 				<div class="footer-copyright fcont">
-					<span>
 						© 2010–2016 Компания «Техномарт»<br>
 						Все права защищены
-					</span>
 				</div>
 				
 				<div class="footer-social fcont">
@@ -445,11 +441,11 @@
 
 				<div class="footer-designed fcont">
 					<div>
-						<p>Обратная связь:</p>
+						Обратная связь:<br>
 						<a href="#">mail@htmlacademy.ru</a>
 					</div>
 					<div>
-						<p>Разработано —</p>
+						Разработано —<br>
 						<a href="#">htmlacademy.ru</a>
 					</div>
 				</div>
